Working tab control implementation
